tests/cases/parser/literals/double_colon_in_map_literal.stderr
error: expected an expression, however received a `::`
 --> $DIR/double_colon_in_map_literal.hash:3:13
2 |   
3 |   k := map!{ 1::2 };
  |               ^^ 
